--- a/Stable/RazorEngineAllInOne/RazorEngineDemo/Views/template.html
+++ b/Stable/RazorEngineAllInOne/RazorEngineDemo/Views/template.html
@@ -1,9 +1,10 @@
 ﻿@using RazorEngine
 @using RazorEngineDemo.ViewModel
-@inherits TemplateBase<ReportModel>
+@inherits RazorEngine.Templating.TemplateBase<reportmodel>
 
-<!--https://antaris.github.io/RazorEngine/IntellisenseAndResharper.html-->
-<!DOCTYPE html>
+
+    <!--https://antaris.github.io/RazorEngine/IntellisenseAndResharper.html-->
+    <!DOCTYPE HTML>
 
     <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
