--- a/Stable/RazorEngineAllInOne/RazorEngineDemo/Views/template02.cshtml
+++ b/Stable/RazorEngineAllInOne/RazorEngineDemo/Views/template02.cshtml
@@ -21,5 +21,26 @@
             <h1>@photo</h1>
         }
     }
+    @for (var i = 1; i <= Model.Count; i++)
+    {
+        var s0 = "#region 部位描述\n";
+        var s1=string.Format("TbCheckItemDetail tbCheckItemDetail{0} = new TbCheckItemDetail();\n", i);
+        var s2=string.Format("tbCheckItemDetail{0}.Name = \"{0}\";\n", i);
+        var s3 = string.Format("var tbCheckItemDesc{0} = tbCheckModule.TbCheckItemDescs.FirstOrDefault(s => s.Key == 1);\n", i);
+        var s4 = string.Format("if (tbCheckItemDesc{0} != null)\n", i);
+        var s5 = string.Format("    tbCheckItemDetail{0}.CheckResult = tbCheckItemDesc{0}.Key;\n", i);
+        var s6 = string.Format("tbCheckModule.TbCheckItemDetails.Add(tbCheckItemDetail{0});\n", i);
+        var s7 = "#endregion\n";
+        var s8 = "\n";
+        @s0
+        @s1
+        @s2
+        @s3
+        @s4
+        @s5
+        @s6
+        @s7
+        @s8
+    }
 </body>
 </html>
